<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ihongqiqu.rxandroiddemo.JavaDemoActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testnormalmethod"
        android:id="@+id/btn_test_normal_method"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testrxjavamethod"
        android:id="@+id/btn_test_rxjava_method"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testobserver"
        android:id="@+id/btn_test_observer"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testsubscribe"
        android:id="@+id/btn_test_subscribe"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testaction"
        android:id="@+id/btn_test_action"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
