<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ihongqiqu.rxandroiddemo.AndroidDemoActivity">

    <Button
        android:id="@+id/btn_show_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_show_image"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/iv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/ic_launcher" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_2_100"
        android:id="@+id/btn_add_operation"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:id="@+id/tv_sum"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
